--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,121 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+a {
+    color: inherit;
+    text-decoration: none;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+#nprogress .bar {
+    height: 5px;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: Segoe UI, Roboto, sans-serif;
+    /* background-color: #fafafa; */
 }
+
+.header {
+    background-image: url('../assets/images/bg.png');
+    max-width: 100vw;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.navbar {
+    background-color: #ffffff;
+}
+
+.logo {
+    font-size: 1.5rem;
+    font-weight: 550;
+    letter-spacing:1.5px;
+    /* color: #0b70a3; */
+    }
+
+.logo span {
+    border-bottom: 2px solid #296A87;   
+}
+
+.link {
+    margin-left: 2rem;
+}
+
+.hero_btn {
+    background: #296A87;
+    border-radius: 1px;
+    font-size: 5px;
+    border: none;
+    padding: 10px 30px;
+    color: white;
+    margin-top: 1rem;
+}
+
+/* .hero_img {
+position: relative;
+right: -2rem;
+} */
+
+.main_container {
+    max-width: 85vw;
+    margin: 0 auto;
+    /* background-color: red; */
+}
+
+.about span {
+    color: #296A87;
+}
+
+.step, .benefit {
+    background: #ffffff;
+    padding: 30px;
+    border-radius: 5px;
+}
+
+
+.content {
+    margin-left: 10px;
+}
+
+
+.tab {
+    font-size: 1.2rem;
+    /* font-weight: 560; */
+    border: none;
+    background-color: transparent;
+    color: #60686b;
+    cursor: pointer;
+}
+
+.tab:nth-child(1) {
+    margin-right: 2rem;
+}
+
+.tab:hover {
+    color: #010202;
+}
+
+
+.house_img {
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    border: none;
+}
+
+
+.home_img {
+    border-radius: 5px;
+    border: none;
+}
+
+.slide_property {
+    width: 1.2rem;
+    height: 1.2rem;
+    border-radius: 50px;
+    background-color: #e2e7e9;
+    border: 1px solid black;
+}
+  
+  
+  
